--- a/Extension to Apply ML/index.html
+++ b/Extension to Apply ML/index.html
@@ -51,7 +51,7 @@
 				<button class="btn btn-outline-primary" id="select_all_btn">
 				  Select All
 				</button>
-				<button class="btn btn-outline-primary" onclick="applyMLFunc()">
+				<button class="btn btn-outline-primary" onclick="sendSelectedThumbnails()">
 				  Apply ML
 				</button>
 			  </div>
