--- a/Extension to Apply ML/index.html
+++ b/Extension to Apply ML/index.html
@@ -62,15 +62,22 @@ td {
   margin: 10px auto;
   height: 300px;
 }
+#homeBtn{
+	display:none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
 </style>
 	</head>
 	<body>
-
+		
 		<div class="container py-3">
 			<div id="message"></div>
 			<!-- Upload Section  -->
 			<div style="display: block;" id="uploadSection" class="upload py-3">
 			  <h3 class="text-cneter">Upload Group Image</h3>
+			 
 			  <form method="POST" enctype="multipart/form-data" id="uploadForm" class="text-center">
 				<input
 				  type="file"
@@ -80,7 +87,8 @@ td {
 				  multiple
 				/>
 				<button type="submit"id="submitBtn" class="btn btn-outline-primary">Submit</button>
-			  </form>
+				
+			</form>
 			  <div id="previewImageSection">
 				<img src="#" id="previewImg" class="d-none" />
 			  </div>
@@ -114,7 +122,7 @@ td {
 			</div>	
 			</div>
 			
-			<button class="btn btn-outline-primary"id="homeBtn" style="display:none; margin: 0 auto; "onclick="showUploadSection()">
+			<button class="btn btn-outline-primary"id="homeBtn" onclick="showUploadSection()">
 				Goto Home
 			  </button>
 
