--- a/Extension to Apply ML/index.html
+++ b/Extension to Apply ML/index.html
@@ -81,11 +81,13 @@ td {
 			  <form method="POST" enctype="multipart/form-data" id="uploadForm" class="text-center">
 				<input
 				  type="file"
-				  name="image__first"
+				  name="groupImages"
 				  class="form-control mb-3"
 				  id="image__first"
 				  multiple
 				/>
+				<input type="text" style="display: none;" value="" id="projectNameInputField"name="projectName"/>
+				<input type="text" style="display: none;" value="" id="importedVideosInputField" name="importedVideos"/>
 				<button type="submit"id="submitBtn" class="btn btn-outline-primary">Submit</button>
 				
 			</form>
