--- a/Generate Video Timeline with ML/index.html
+++ b/Generate Video Timeline with ML/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!-- This document forms the dockable panel. The button is the <input> tag below. The <style> formats the button. 
-
-		The extendscript is called through the <script type="text/javascript"> tag, which then routes it to use the adobe_cep_.evalScript to interpret that Javascript into Extendscript -->
-
 <html>
   <head>
     <meta charset="utf-8" />
@@ -84,8 +80,10 @@
         <ul id="thumbnails"></ul>
       </div>
 
-      <div style="display: none" id="statSection">
-        <div class="row"></div>
+      <div style="display:none;" id="statSection">
+        <div class="row">
+       
+        </div>
       </div>
 
       <button
