clone from PA git repo

--- a/Generate Video Timeline with ML/index.html
+++ b/Generate Video Timeline with ML/index.html
@@ -14,8 +14,8 @@
     <link href="css/loading_animation.css" rel="stylesheet" />
 
     <!-- adding Jquery -->
-    <script src="./js/jquery.js"></script>
-    <script src="./js/jquery-ui.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
   </head>
   <body>
     <div class="container py-3">
@@ -89,7 +89,7 @@
       <button
         class="btn btn-outline-primary"
         id="homeBtn"
-        onclick="showUploadSection()"
+        style="display: none;"
       >
         Goto Home
       </button>
